RESOLVED FIXED201614
[iOS] We sometimes attempt to use a terminated prewarmed WebContent process
https://bugs.webkit.org/show_bug.cgi?id=201614
Summary [iOS] We sometimes attempt to use a terminated prewarmed WebContent process
Chris Dumez
Reported 2019-09-09 14:05:27 PDT
We sometimes attempt to use a terminated prewarmed WebContent process, in particular upon resuming the UIProcess from suspension and when the prewarmed process has been jetsammed while we were suspended. In this case, upon resuming, it may take a while to get the notification that the mach connection has been closed and we'll use the prewarmed process. When we finally end up getting the notification, it is too late. We notify the client and it usually shows a crash banner. Ideally, we would not use such process in the first place. It is also arguable whether it makes sense to keep prewarmed processes around when the UIProcess gets suspended.
Attachments
Patch (9.18 KB, patch)
2019-09-09 14:13 PDT, Chris Dumez
no flags
Patch (9.13 KB, patch)
2019-09-09 18:27 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-09 14:05:53 PDT
Chris Dumez
Comment 2 2019-09-09 14:13:18 PDT
Geoffrey Garen
Comment 3 2019-09-09 16:16:21 PDT
Comment on attachment 378408 [details] Patch r=me if you update to resolve merge conflict
Chris Dumez
Comment 4 2019-09-09 18:27:35 PDT
WebKit Commit Bot
Comment 5 2019-09-09 21:24:29 PDT
Comment on attachment 378424 [details] Patch Clearing flags on attachment: 378424 Committed r249703: <https://trac.webkit.org/changeset/249703>
WebKit Commit Bot
Comment 6 2019-09-09 21:24:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.