Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp
@@ -28,6 +28,7 @@
 
 #include "AuxiliaryProcessMessages.h"
 #include "LoadParameters.h"
+#include "Logging.h"
 #include "WebPageMessages.h"
 #include <wtf/RunLoop.h>
 
@@ -108,10 +109,35 @@ AuxiliaryProcessProxy::State AuxiliaryProcessProxy::state() const
     if (m_processLauncher && m_processLauncher->isLaunching())
         return AuxiliaryProcessProxy::State::Launching;
 
-    if (!m_connection)
+    // There is sometimes a delay until we get the notification from mach about the connection getting closed.
+    // To help detect terminated process earlier, we also check that the PID is for a valid running process.
+    if (!m_connection || !isRunningProcessPID(processIdentifier()))
         return AuxiliaryProcessProxy::State::Terminated;
 
     return AuxiliaryProcessProxy::State::Running;
+}
+
+bool AuxiliaryProcessProxy::isRunningProcessPID(ProcessID pid)
+{
+    if (!pid)
+        return false;
+
+#if PLATFORM(COCOA)
+    // Use kill() with a signal of 0 to check if there is actually still a process with the given PID.
+    if (!kill(pid, 0))
+        return true;
+
+    if (errno == ESRCH) {
+        // No process can be found corresponding to that specified by pid.
+        return false;
+    }
+
+    RELEASE_LOG_ERROR(Process, "kill() returned unexpected error %d", errno);
+    return true;
+#else
+    UNUSED_PARAM(pid);
+    return true;
+#endif
 }
 
 bool AuxiliaryProcessProxy::sendMessage(std::unique_ptr<IPC::Encoder> encoder, OptionSet<IPC::SendOption> sendOptions)
